[package]
name = "async-wavelets"
version = "0.1.0"
edition = "2024"

[lib]
name = "wavelets"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.103"
clap = {version = "4.6.1", features = ["derive"]}
num-complex = "0.4.6"
rayon = "1.12.0"
rustfft = "6.4.1"
statrs = "0.18.0"
symphonia = "0.6.0"
tokio = {version = "1.52.3", features = ["full"]}
tokio-stream = {version = "0.1.18", features = ["fs"]}
